--- a/configs/nucleo-f4x1re/src/Makefile
+++ b/configs/nucleo-f4x1re/src/Makefile
@@ -36,7 +36,8 @@
 -include $(TOPDIR)/Make.defs
 
 ASRCS =
-CSRCS = stm32_boot.c stm32_spi.c
+# FIXME : DEBUG : HACK GOLDO
+CSRCS = stm32_boot.c stm32_spi.c stm32_pwm.c
 
 ifeq ($(CONFIG_ARCH_LEDS),y)
 CSRCS += stm32_autoleds.c
