nucleo-f303re: add support of qencoder
based on the nucleo-f4x1re.

Signed-off-by: Zakaria ElQotbi <zakaria@elqotbi.com>

--- a/configs/nucleo-f303re/Kconfig
+++ b/configs/nucleo-f303re/Kconfig
@@ -5,4 +5,9 @@
 
 if ARCH_BOARD_NUCLEO_F303RE
 
-endif
+config NUCLEO_F303RE_QETIMER
+	int "Timer to use with QE encoder"
+	default 3
+	depends on QENCODER
+
+endif # ARCH_BOARD_NUCLEO_F303RE
