build: adding a Build customisation for goldobot
make nuttx buildsystem support a thirdparty customizations
here we add a mk script to make build silent and also tu add a new rule:
make flash

Signed-off-by: Zakaria ElQotbi <zakaria@elqotbi.com>

--- a/Makefile.unix
+++ b/Makefile.unix
@@ -590,3 +590,5 @@ apps_distclean:
 ifneq ($(APPDIR),)
 	$(Q) $(MAKE) -C "$(TOPDIR)/$(APPDIR)" TOPDIR="$(TOPDIR)" distclean
 endif
+
+-include $(TOPDIR)/goldobot.mk
